# func-gen

./: README.md  pyproject.toml
func_gen/: __init__.py  eval.wasm
